--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/NikitaKST/webpack/issues"
   },
-  "homepage": "https://github.com/NikitaKST/webpack#readme"
+  "homepage": "https://github.com/NikitaKST/webpack#readme",
+  "devDependencies": {
+    "webpack": "^5.88.2"
+  }
 }
